New docker-compose files for new release

--- a/.env
+++ b/.env
@@ -1,12 +1,31 @@
+#AMS_PROJECT_EXTERNAL_DNS_NAME_OR_IP=host.docker.internal
+AMS_PROJECT_EXTERNAL_DNS_NAME_OR_IP=172.17.0.1
 
 # name of the environment 
-ENVIRONMENT_NAME=test
+ENVIRONMENT_NAME=dev
 
-# url to configuration consul application 
-CONSUL_URL=http://consul:8500
-
-# project docker registry server and namespace 
-PROJECT_IMAGE_ROOT=maddev77
+# url to configuration
+CONSUL_URL=http://test-ux-dokker.ams.local:8500
 
 # tag
-TAG=v1-beta
+#TAG=v1-beta
+
+# registry
+#REGISTRY=test-ux-dokker.ams.local:5000/ams/ams-project
+#REGISTRY=maddev77
+REGISTRY=amssolution
+
+# connections
+AMS_DB=Server=sqldev2012.ams.local,1433;Database=dev-amsprojekt;User ID=projectuser;Password=projectuser;Max Pool Size=100
+IDENTITY_ACCESS_DB=Server=sqldev2012.ams.local,1433;Database=dev-identity;User ID=projectuser;Password=projectuser;Max Pool Size=100
+
+# ui
+CULTURE_CODE=de-DE
+
+# email settings
+MAIL_SERVER=EXSRV01.ams.local
+MAIL_PORT=25
+MAIL_SENDER_NAME=ams.project DEV
+MAIL_SENDER=noreply@ams-erp.com
+MAIL_PASSWORD=ENTER_YOUR_PASSWORD
+MAIL_IS_AUTHENTICATION_REQUIRED=false
