--- a/docker-compose.infra.yml
+++ b/docker-compose.infra.yml
@@ -1,5 +1,8 @@
 version: '3.4'
 
-services:   
+services:
+  sqldata:
+    image: mcr.microsoft.com/mssql/server:2019-latest 
+    
   project.eventstore:
     image: eventstore/eventstore:release-5.0.8
