Updating compose files to include latest services

--- a/.env
+++ b/.env
@@ -18,6 +18,7 @@ REGISTRY=amssolution
 # connections
 AMS_DB=Server=sqldev2012.ams.local,1433;Database=dev-amsprojekt;User ID=projectuser;Password=projectuser;Max Pool Size=100
 IDENTITY_ACCESS_DB=Server=sqldev2012.ams.local,1433;Database=dev-identity;User ID=projectuser;Password=projectuser;Max Pool Size=100
+#EVENTSTORE_DB=tcp://admin:changeit@test-ux-dokker.ams.local:1114
 
 # ui
 CULTURE_CODE=de-DE
