--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -78,6 +78,10 @@ services:
   planning-reporting-clienthub:
       image: ${REGISTRY:-amssolution}/scheduling.reporting.clienthub:${PLATFORM:-linux}-${TAG:-latest}
 
+  #production planning
+  bom-api:
+    image: ${REGISTRY:-amssolution}/productionplanning.bom.api:${PLATFORM:-linux}-${TAG:-latest}
+
   #identity access
   identity-api:
     image: ${REGISTRY:-amssolution}/identityaccess.identityserver:${PLATFORM:-linux}-${TAG:-latest}
