--- a/.env
+++ b/.env
@@ -1,12 +1,12 @@
-AMS_PROJECT_EXTERNAL_DNS_NAME_OR_IP=172.17.0.1
+AMS_PROJECT_EXTERNAL_DNS_NAME_OR_IP=YOUR_DNS_NAME_OR_IP
 TAG=master
 CULTURE_CODE=de-DE
 REGISTRY=amssolution
 
 # connections
-AMS_DB=Server=sqldev2012.ams.local,1433;Database=dev-amsprojekt;User ID=projectuser;Password=projectuser;Max Pool Size=100
-IDENTITY_ACCESS_DB=Server=sqldev2012.ams.local,1433;Database=dev-identity;User ID=projectuser;Password=projectuser;Max Pool Size=100
-EVENTSTORE_DB=tcp://admin:changeit@test-ux-dokker.ams.local:1114
+AMS_DB=Server=DB_SERVER;Database=AMS_DB_NAME;User ID=projectuser;Password=projectuser;Max Pool Size=100
+IDENTITY_ACCESS_DB=Server=DB_SERVER;IDENTITY_DB_NAME;User ID=projectuser;Password=projectuser;Max Pool Size=100
+#EVENTSTORE_DB=tcp://admin:changeit@eventstore:1111
 
 # email settings
 MAIL_SERVER=EXSRV01.ams.local
