Adjustments for wage data

--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@ AMS_PROJECT_EXTERNAL_DNS_NAME_OR_IP=YOUR_DNS_NAME_OR_IP
 TAG=master
 CULTURE_CODE=de-DE
 REGISTRY=amssolution
+ERP_MAIN_VERSION=11
 
 # connections
 AMS_DB=Server=DB_SERVER;Database=AMS_DB_NAME;User ID=projectuser;Password=projectuser;Max Pool Size=100
