--- a/.env
+++ b/.env
@@ -10,9 +10,9 @@ IDENTITY_ACCESS_DB=Server=DB_SERVER;IDENTITY_DB_NAME;User ID=projectuser;Passwor
 #EVENTSTORE_DB=tcp://admin:changeit@eventstore:1111
 
 # email settings
-MAIL_SERVER=EXSRV01.ams.local
+MAIL_SERVER=MAIL_SERVER
 MAIL_PORT=25
-MAIL_SENDER_NAME=ams.project 
-MAIL_SENDER=noreply@ams-erp.com
-MAIL_PASSWORD=ENTER_YOUR_PASSWORD
+MAIL_SENDER_NAME=ENTER_YOUR_SENDER_NAME 
+MAIL_SENDER=ENTER_YOUR_SENDER_ADRESS
+MAIL_PASSWORD=ENTER_YOUR_PASSWORD_IF_REQUIRED
 MAIL_IS_AUTHENTICATION_REQUIRED=false
